--- a/app/src/main/res/drawable/button_new.xml
+++ b/app/src/main/res/drawable/button_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-  <stroke android:color="#F44C85" android:width="1dp"/>
-  <corners android:radius="6dp"/>
+ <gradient android:startColor="#2AF598" android:endColor="#009EFD"/>
+  <corners android:radius="10dp"/>
 </shape>
