--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
         android:textAllCaps="false"
-        android:text="Start"
+        android:text="GO"
         android:background="@drawable/button_new"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
